# wowlogs_parser

./: Cargo.toml  clippy.toml
src/: advanced.rs  cli.rs  common_components.rs  components.rs  consumers.rs  enums.rs  events.rs  guid.rs  main.rs  parser.rs  player_events.rs  prefixes.rs  special.rs  suffixes.rs  traits.rs  utils.rs
src/components/: advanced.rs  combatant.rs  common.rs  enums.rs  events.rs  guid.rs  prefixes.rs  special.rs  suffixes.rs
