[package]
name = "wowlogs_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3.0"
itertools = "0.12.1"
chrono = "0.4.35"
strum = { version = "0.26.2" , features = ["derive"]}
anyhow = "1.0.81"
num-traits = "0.2.18"
notify = "6.1.1"
regex = "1.10.4"

[lints.rust]
unused_variables = "warn"
dead_code = "allow"

[lints.clippy]
large_enum_variant = "warn"